--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Analyse de données d'eye-tracking (fichiers TSV) et synchronisat
 authors = ["jeanne-boussonniere"]
 readme = "README.md"
 packages = [
-    { include = "ProTech.py" }
+    { include = "code.py" }
 ]
 
 [tool.poetry.dependencies]
@@ -13,11 +13,8 @@ python = "^3.10" # Assurez-vous d'avoir Python 3.10 ou plus
 
 pandas = "*"
 openpyxl = "*"
-scikit-learn = "*"  # Pour sklearn
-matplotlib = "*"
 moviepy = "*"
-scipy = "*"
-opencv-python = "*" # Pour cv2
+opencv-python = "*" 
 numpy = "*"
 
 
