--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ openpyxl = "*"
 moviepy = "*"
 opencv-python = "*"
 numpy = "*"
+pytest = "*"
 
 [build-system]
 requires = ["poetry-core"]
@@ -24,7 +25,8 @@ build-backend = "poetry.core.masonry.api"
 [dependency-groups]
 dev = [
     "pylint (>=4.0.3,<5.0.0)",
-    "pre-commit (>=4.5.0,<5.0.0)"
+    "pre-commit (>=4.5.0,<5.0.0)",
+    "pytest (>=9.0.1,<10.0.0)"
 ]
 
 [tool.pylint.main]
