--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         run: pip install poetry
 
       - name: Install dependencies with Poetry
-        run: poetry install
+        run: poetry install --no-root
 
       - name: Run Tests
         env:
