--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,8 @@ name: ProTech GitHub Actions
 on:
   push:
     branches: [ main ]
+    tags:
+        - "v*.*.*"
 
 jobs:
   test:
@@ -63,3 +65,26 @@ jobs:
             path: .
             base: ""
             head: ""
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: [test, quality]
+    if: startsWith(github.ref, 'refs/tags/')
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+
+      - name: Build Project artifacts
+        run: poetry build
+
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: github.ref_type == 'tag'
+        with:
+          files: dist/*
+          generate_release_notes: true
