--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,6 +70,10 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     needs: [test, quality]
+    if: github.ref_type == 'tag'
+
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout
@@ -83,7 +87,6 @@ jobs:
 
       - name: Release
         uses: softprops/action-gh-release@v2
-        if: github.ref_type == 'tag'
         with:
           files: dist/*
           generate_release_notes: true
